--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -10,7 +10,16 @@
   margin: 0;
   padding: 0;
 }
-
+.mealsIsLoading {
+  text-align: center;
+  font-size: 18px;
+  color: white;
+}
+.mealsError {
+  text-align: center;
+  font-size: 18px;
+  color: red;
+}
 @keyframes meals-appear {
   from {
     opacity: 0;
